# nng

./: .gitignore  CMakeLists.txt  nng.Rproj
cmake/: FindmbedTLS.cmake  NNGOptions.cmake
include/nng/: nng.h
include/nng/compat/nanomsg/: bus.h  inproc.h  ipc.h  nn.h  pair.h  pipeline.h  pubsub.h  reqrep.h  survey.h  tcp.h  ws.h
include/nng/supplemental/util/: platform.h
src/: CMakeLists.txt  nng.c  nng_legacy.c
src/compat/nanomsg/: CMakeLists.txt
src/core/: CMakeLists.txt  aio.c  aio.h  defs.h  device.h  file.h  idhash.c  idhash.h  init.h  list.h  lmq.h  message.h  msgqueue.h  nng_impl.h  options.h  panic.h  pipe.h  platform.h  pollable.h  protocol.h  reap.h  socket.c  socket.h  sockfd.c  sockfd.h  sockimpl.h  stats.h  stream.c  stream.h  strs.c  strs.h  taskq.h  tcp.h  thread.c  thread.h  url.c
src/platform/: CMakeLists.txt  ipc_stream_test.c  tcp_stream_test.c
src/platform/posix/: CMakeLists.txt  posix_aio.h  posix_config.h  posix_impl.h  posix_ipc.h  posix_ipcconn.c  posix_ipcdial.c  posix_ipclisten.c  posix_peerid.h  posix_pollq.h  posix_rand_arc4random.c  posix_rand_getrandom.c  posix_resolv_gai.c  posix_sockaddr.c  posix_sockfd.c  posix_tcp.h  posix_tcpconn.c  posix_tcpdial.c  posix_tcplisten.c  posix_thread.c  posix_udp.c
src/platform/windows/: CMakeLists.txt  win_clock.c  win_debug.c  win_impl.h  win_io.c  win_ipc.h  win_ipcconn.c  win_ipclisten.c  win_resolv.c  win_sockaddr.c  win_tcp.h  win_tcpconn.c  win_tcpdial.c  win_tcplisten.c
src/sp/: transport.c  transport.h
src/sp/protocol/: CMakeLists.txt
src/sp/protocol/bus0/: CMakeLists.txt
src/sp/protocol/pair0/: CMakeLists.txt
src/sp/protocol/pair1/: pair.c  pair1_poly.c
src/sp/protocol/pubsub0/: sub.c
src/sp/protocol/reqrep0/: req.c
src/sp/protocol/survey0/: CMakeLists.txt  respond.c
src/sp/transport/: CMakeLists.txt
src/sp/transport/socket/: CMakeLists.txt
src/sp/transport/tcp/: tcp.c
src/sp/transport/tls/: tls.c
src/sp/transport/ws/: CMakeLists.txt  websocket.c
src/supplemental/base64/: base64.h
src/supplemental/http/: http_api.h  http_schemes.c  http_server.c
src/supplemental/idhash/: CMakeLists.txt
src/supplemental/sha1/: CMakeLists.txt
src/supplemental/tls/: tls_api.h  tls_common.c
src/supplemental/tls/mbedtls/: CMakeLists.txt  tls.c
src/supplemental/util/: CMakeLists.txt  platform.c
src/supplemental/websocket/: CMakeLists.txt  websocket.c  websocket.h
